Edit shopping-cart page css

--- a/BodyCareProducts/src/main/webapp/shopping-cart.html
+++ b/BodyCareProducts/src/main/webapp/shopping-cart.html
@@ -280,13 +280,13 @@
                                 <a href="#" class="primary-btn continue-shop">Continue shopping</a>
                                 <a href="#" class="primary-btn up-cart">Update cart</a>
                             </div>
-                            <div class="discount-coupon">
+                            <!-- <div class="discount-coupon">
                                 <h6>Discount Codes</h6>
                                 <form action="#" class="coupon-form">
                                     <input type="text" placeholder="Enter your codes">
                                     <button type="submit" class="site-btn coupon-btn">Apply</button>
                                 </form>
-                            </div>
+                            </div> -->
                         </div>
                         <div class="col-lg-4 offset-lg-4">
                             <div class="proceed-checkout">
@@ -301,6 +301,7 @@
                 </div>
             </div>
         </div>
+    
     </section>
     <!-- Shopping Cart Section End -->
 
