Edit contact css

--- a/BodyCareProducts/src/main/webapp/contact.html
+++ b/BodyCareProducts/src/main/webapp/contact.html
@@ -172,7 +172,7 @@
     <!-- Breadcrumb Section Begin -->
 
     <!-- Map Section Begin -->
-    <div class="map spad">
+    <!-- <div class="map spad">
         <div class="container">
             <div class="map-inner">
                 <iframe
@@ -184,7 +184,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
     <!-- Map Section Begin -->
 
     <!-- Contact Section Begin -->
@@ -194,8 +194,10 @@
                 <div class="col-lg-5">
                     <div class="contact-title">
                         <h4>Contacts Us</h4>
-                        <p>Contrary to popular belief, Lorem Ipsum is simply random text. It has roots in a piece of
-                            classical Latin literature from 45 BC, maki years old.</p>
+                        <p>Bath and Body Works is your go-to place for gifts & goodies that surprise & delight.
+                             From fresh fragrances to soothing skin care,
+                              we make finding your perfect something special a happy-memory-making experience.
+                               Oh! And while you're browsing, shop our latest & greatest selection of lotions, soaps and candles!</p>
                     </div>
                     <div class="contact-widget">
                         <div class="cw-item">
