Edit checkout css

--- a/BodyCareProducts/src/main/webapp/check-out.html
+++ b/BodyCareProducts/src/main/webapp/check-out.html
@@ -232,9 +232,14 @@
                         </div>
                     </div>
                     <div class="col-lg-6">
-                        <div class="checkout-content">
+                        <!-- <div class="checkout-content">
                             <input type="text" placeholder="Enter Your Coupon Code">
-                        </div>
+                        </div> -->
+                        <br>
+                        <br>
+                        <br>
+                        <br>
+                        <br>
                         <div class="place-order">
                             <h4>Your Order</h4>
                             <div class="order-total">
