Revert "Merge pull request #4 from salmafayez/separate-css-files"
This reverts commit 5d82acd9c247831091772526fedeabe75619a070, reversing
changes made to 548dda7d89df5b443a7b89e83ef2cd3ad776ba25.

--- a/BodyCareProducts/src/main/webapp/login.html
+++ b/BodyCareProducts/src/main/webapp/login.html
@@ -22,11 +22,6 @@
     <link rel="stylesheet" href="css/jquery-ui.min.css" type="text/css">
     <link rel="stylesheet" href="css/slicknav.min.css" type="text/css">
     <link rel="stylesheet" href="css/style.css" type="text/css">
-    <link rel="preconnect" href="https://fonts.googleapis.com/%22%3E"/>
-<link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin/>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital@1&family=Roboto:wght@100&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Karla:400,700%7CMartel:400,700" rel="stylesheet">
 </head>
 
 <body>
@@ -37,7 +32,7 @@
 
     <!-- Header Section Begin -->
 
-        <div class="container ">
+        <div class="container">
             <div class="inner-header">
                 <div class="row">
                     <div class="col-lg-2 col-md-2">
@@ -48,8 +43,9 @@
                         </div>
                     </div>
                     <div class="col-lg-7 col-lg-7">
-                        <div class="advanced-search" style="border: none;">
-                            <form action="#" class="input-group" >
+                        <div class="advanced-search">
+                            <button type="button" class="category-btn">All Categories</button>
+                            <form action="#" class="input-group">
                                 <input type="text" placeholder="What do you need?">
                                 <button type="button"><i class="ti-search"></i></button>
                             </form>
@@ -113,8 +109,8 @@
                 </div>
             </div>
         </div>
-        <div class="nav-item ">
-            <div class="container " style="">
+        <div class="nav-item">
+            <div class="container">
                 <div class="nav-depart">
                     <div class="depart-btn">
                         <i class="ti-menu"></i>
@@ -178,8 +174,8 @@
     <!-- Breadcrumb Form Section Begin -->
 
     <!-- Register Section Begin -->
-    <div class="register-login-section spad" >
-        <div class="container" >
+    <div class="register-login-section spad">
+        <div class="container">
             <div class="row">
                 <div class="col-lg-6 offset-lg-3">
                     <div class="login-form">
@@ -187,11 +183,11 @@
                         <form action="#">
                             <div class="group-input">
                                 <label for="username">Username or email address *</label>
-                                <input type="text" id="username" class="loginInputs">
+                                <input type="text" id="username">
                             </div>
                             <div class="group-input">
                                 <label for="pass">Password *</label>
-                                <input type="text" id="pass" class="loginInputs">
+                                <input type="text" id="pass">
                             </div>
                             <div class="group-input gi-check">
                                 <div class="gi-more">
@@ -216,7 +212,37 @@
     <!-- Register Form Section End -->
 
     <!-- Partner Logo Section Begin -->
-<!--   -->
+    <div class="partner-logo">
+        <div class="container">
+            <div class="logo-carousel owl-carousel">
+                <div class="logo-item">
+                    <div class="tablecell-inner">
+                        <img src="img/logo-carousel/logo-1.png" alt="">
+                    </div>
+                </div>
+                <div class="logo-item">
+                    <div class="tablecell-inner">
+                        <img src="img/logo-carousel/logo-2.png" alt="">
+                    </div>
+                </div>
+                <div class="logo-item">
+                    <div class="tablecell-inner">
+                        <img src="img/logo-carousel/logo-3.png" alt="">
+                    </div>
+                </div>
+                <div class="logo-item">
+                    <div class="tablecell-inner">
+                        <img src="img/logo-carousel/logo-4.png" alt="">
+                    </div>
+                </div>
+                <div class="logo-item">
+                    <div class="tablecell-inner">
+                        <img src="img/logo-carousel/logo-5.png" alt="">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
     <!-- Partner Logo Section End -->
 
     <!-- Footer Section Begin -->
